@@ -1,3 +1,7 @@
+drkns 04.08.2020 17:56:27 +0100 - build 5649
+
+1. С форума: ненужный запрос привилегий
+
 drkns 03.08.2020 22:49:55 +0100 - build 5648
 
 1. gh-262 AutoComplete popup does not show under Windows 10's Terminal
